[build-system]
requires = ["setuptools", "cython==3.0.*"]
build-backend = "setuptools.build_meta"

[project]
name = "pytaglib"
version = "3.0.0"
requires-python = ">=3.6"
description = "cross-platform, Python audio metadata (\"tagging\") library based on TagLib"
authors = [
    { name = "Michael Helmling", email = "michaelhelmling@posteo.de" }
]
readme = "README.md"
license = { text = "GPLv3+" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules", ]

[project.urls]
Repository = "https://github.com/supermihi/pytaglib"
Issues = "https://github.com/supermihi/pytaglib/issues"
Changelog = "https://github.com/supermihi/pytaglib/blob/main/CHANGELOG.md"

[project.optional-dependencies]
tests = ["pytest~=8.1.1"]

[project.scripts]
pyprinttags = "pyprinttags:script"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.cibuildwheel]
test-extras = ["tests"]
test-command = "pytest {project}/tests"
before-build = "python build_native_taglib.py"
skip = "cp36-* cp37-*"
