[build-system]
requires = ["setuptools>=77.0.3", "cython==3.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytaglib"
version = "3.1.0"
requires-python = ">=3.9"
description = "cross-platform, Python audio metadata (\"tagging\") library based on TagLib"
authors = [
    { name = "Michael Helmling", email = "michaelhelmling@posteo.de" }
]
readme = "README.md"
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules", ]

[project.urls]
Repository = "https://github.com/supermihi/pytaglib"
Issues = "https://github.com/supermihi/pytaglib/issues"
Changelog = "https://github.com/supermihi/pytaglib/blob/main/CHANGELOG.md"

[project.optional-dependencies]
tests = ["pytest>=8.1.1,<8.5.0"]

[project.scripts]
pyprinttags = "pyprinttags:script"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.cibuildwheel]
test-extras = ["tests"]
test-command = "pytest {project}/tests"
before-build = "python build_native_taglib.py"
skip = "cp36-* cp37-* cp38-*"
enable = ["pypy"]